@@ -17,19 +17,18 @@
     <url>http://maven.apache.org</url>
 
     <properties>
-        <testng.version>6.13.1</testng.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.4</version>
+            <version>3.14.0</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.4</version>
+            <version>2.15.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -115,7 +114,26 @@
                 <configuration>
                     <forkCount>7</forkCount>
                     <reuseForks>true</reuseForks>
-                    <argLine>-Xmx2048m -Djava.library.path=/home/y/lib64 ${surefireArgLine}</argLine>
+
+                    <argLine>-Xmx2048m -Djava.library.path=/home/y/lib64 ${surefireArgLine} --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+                        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-opens=java.base/java.io=ALL-UNNAMED
+                        --add-opens=java.base/java.net=ALL-UNNAMED
+                        --add-opens=java.base/java.nio=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+                        --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+                        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
+                        --add-opens=java.base/sun.security.action=ALL-UNNAMED
+                        --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+                        --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED
+                        -Xmx2048m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp/heapdump
+                        -Djdk.attach.allowAttachSelf=true
+                        -Duser.timezone=UTC
+                        -XX:+EnableDynamicAgentLoading
+                    </argLine>
                     <workingDirectory>target/FORK_DIRECTORY_${surefire.forkNumber}</workingDirectory>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                 </configuration>
@@ -170,7 +188,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.5</version>
+                <version>0.8.11</version>
                 <executions>
                     <execution>
                         <id>prepare-agent</id>
